Font, level text

--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>SPACE</title>
     <style>
-        #myCanvas {
-            background: darkgrey;
-        }
-        h1 {
-            font-family: "Helvetica Neue";
-        }
+      @font-face {
+        font-family: pixelFont;
+        src: url('pixelFont.ttf');
+      }
+      body {
+        font-family: pixelFont;
+      }
+      #myCanvas {
+        background: darkgrey;
+      }
     </style>
 </head>
 <body>
