--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
         src: url('pixelFont.ttf');
       }
       body {
-        font-family: pixelFont;
+        background-color: #000;
       }
       #myCanvas {
-        background: darkgrey;
+        background: #111;
+        margin: auto;
+        display: block;
       }
     </style>
 </head>
 <body>
 <canvas id="myCanvas" width="600" height="600"></canvas>
+<a href="report.pdf" target="_blank"><p>Report PDF</p></a>
 <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
 <script src='js/script.js'></script>
 </body>
