Front end changes

--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
         src: url('pixelFont.ttf');
       }
       body {
-        background-color: #000;
+        background-color: #111;
+      }
+      a, a:hover, a:active, a:visited {
+        color: #fff
       }
       #myCanvas {
-        background: #111;
+        background-color: #0a0a0a;
+        border: 1px solid #888;
         margin: auto;
         display: block;
       }
