Report, background music, explosion

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         background-color: #111;
       }
       a, a:hover, a:active, a:visited {
-        color: #fff
+        color: #fff;
       }
       #myCanvas {
         background-color: #0a0a0a;
@@ -26,7 +26,7 @@
 </head>
 <body>
 <canvas id="myCanvas" width="600" height="600"></canvas>
-<a href="report.pdf" target="_blank"><p>Report PDF</p></a>
+<a href="some-space-shooter-thingy-min.pdf" target="_blank"><p>Report PDF</p></a>
 <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
 <script src='js/script.js'></script>
 </body>
